<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_myList"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/MyList" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/Search" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Dashboard" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/logo"
                android:title="About" />
        </menu>
    </item>
    <item android:title="Actions">
        <menu>
            <item
                android:id="@+id/nav_addItem"
                android:icon="@android:drawable/ic_menu_add"
                android:title="Add Item" />
            <item
                android:id="@+id/nav_sginout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="Sginout" />
        </menu>
    </item>

</menu>
