<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="a2lend.app.com.a2lend.MainActivity"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:padding="20dp">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/black_overlay"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:onClick="signin"
                android:text="@string/sign_in"
                android:textSize="16sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/signInAnonymously"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:onClick="signInAnonymously"
                android:text="@string/login_anonymously"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:onClick="forgotPassword"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_red_dark" />

            <Button
                android:id="@+id/signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:onClick="register"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
